[package]
name = "rocksdb-issue"
version = "0.1.0"
authors = ["Chenxing Li <ChenxingLi@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kvdb-rocksdb = "0.9.1"
rand = "0.7"
rand_pcg = "0.2"
pprof = { version = "0.3", features = ["flamegraph", "protobuf"] }
crc64fast = "1.0"
kvdb = "0.7"